# encryptProject

./: .gitignore  CMakeLists.txt  README.md
Sources/: choosewindow.cpp  filewindow.cpp  main.cpp  stringwindow.cpp
Sources/Forms/: choosewindow.ui  filewindow.ui  stringwindow.ui
Sources/Headers/: choosewindow.h  filewindow.h  stringwindow.h
static/ico/: ico.rc
